[tool.poetry]
name = "astronomy"
version = "0.1.0"
description = "learn astronomy"
authors = ["wasif"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
